package swarm;


message PbRequest {
    required uint32 tv_sec  = 1;
    required uint32 tv_usec = 2;
    required int32 frame_id = 3;
    required bytes payload  = 4;
    optional int32 decoder  = 5;

    optional bytes src_addr = 6;
    optional bytes dst_addr = 7;
    optional int32 proto    = 8;
    optional int32 src_port = 9;
    optional int32 dst_port = 10;
}

message PbEmit {
    required bytes payload  = 1;
    required int32 next     = 2;
    optional bytes src_addr = 3;
    optional bytes dst_addr = 4;
    optional int32 proto    = 5;
    optional int32 src_port = 6;
    optional int32 dst_port = 7;
	
}

message PbDispatch {
    required uint32 event = 1;
    message PbVariable {
	required uint32 key = 1;
	required bytes data = 2;
	required uint32 idx = 3;
    }
    repeated PbVariable var = 2;
}

message PbContent {
    required PbRequest req = 1;
    optional PbEmit emit = 2;
    repeated PbDispatch disp = 3;
}

message PbContentList {
    optional string next_file = 1;
    repeated PbContent content = 2;
}
